--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
         <div class="feature-title">Ôn thi </div>
         <div class="feature-desc">Phần mềm luyện thi và ôn tập đề thi. Tương tự Quizizz.</div>
       </a>
+      <a class="feature" href="random.html">
+        <img class="feature-img" src="random.png" alt="random">
+        <div class="feature-title">Vòng quay may mắn</div>
+        <div class="feature-desc">Vòng quay may mắn giúp bạn tự tạo vòng quay random ngẫu nhiên cực kỳ tiện lợi. Bạn có thể dễ dàng nhập nội dung tùy chỉnh theo ý muốn như tên người chơi, phần quà, số ngẫu nhiên hay các chủ đề vui nhộn.</div>
+      </a>
       <a class="feature" href="test.html">
         <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/2919/2919600.png" alt="Test">
         <div class="feature-title">Test code</div>
