--- a/random.html
+++ b/random.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vòng Quay May Mắn - Sửa lỗi & Cải tiến</title>
+    <title>Vòng Quay May Mắn</title>
     <!-- Thêm logo trang web -->
     <link rel="icon" type="image/png" href="logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
