--- a/onthi.html
+++ b/onthi.html
@@ -173,7 +173,7 @@
             <div id="home-screen" class="card p-8 rounded-2xl shadow-2xl text-black">
                 <div class="text-center flex-shrink-0">
                     <i class="fas fa-rocket text-5xl text-purple-500 mb-4"></i>
-                    <h1 class="text-4xl font-bold mb-2">Chào mừng đến Quiz Vui!</h1>
+                    <h1 class="text-4xl font-bold mb-2">Chào mừng đến với ôn thi cùng Quiz</h1>
                     <p class="text-lg text-black mb-6">Chọn một quiz để bắt đầu hoặc tạo quiz của riêng bạn.</p>
                 </div>
                 <div class="my-8 flex-grow flex flex-col min-h-0">
