--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="feature-title">Test code</div>
         <div class="feature-desc">Soon.</div>
       </a>
-      <a class="feature" href="soon.html">
+      <a class="feature" href="converter.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
         <div class="feature-title">Soon </div>
         <div class="feature-desc">Soon</div>
