--- a/app.html
+++ b/app.html
@@ -196,77 +196,77 @@ body {
       {
         name: "Microsoft Project",
         icon: "project.png", // phải đúng tên file
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EtBthx3SX11IrpGZcvxxyPQBOeZpZe9F25HyKm6xadY6Lg?e=ZDqnfj",
+        link: "https://drive.usercontent.google.com/download?id=1CWK78I1SjpIS_jnjnxJ0VbVjkknrD9at&export=download&authuser=0&confirm=t&uuid=12aa9757-03b1-4e22-8fe6-358e4621fd95&at=AN8xHoq0Yr-3e2DQ1kb68fupOn-0:1753192010170",
         desc: "Phần mềm dùng để lên kế hoạch, phục vụ, theo sát dự án (đã kèm key theo). Áp dụng cho người chỉ cần cài 1 phần mềm này hoặc máy đã có những phần mềm microsoft khác chỉ cài bổ sung thêm.",
         price: "Miễn phí"
       },
       {
         name: "Microsoft Visio",
         icon: "visio.png",
-        link: "https://koha2002-my.sharepoint.com/personal/koha2002_koha2002_onmicrosoft_com/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Fkoha2002%5Fkoha2002%5Fonmicrosoft%5Fcom%2FDocuments%2F1%2E%20Share%2FAPP%2FVisio&ga=1",
+        link: "https://drive.usercontent.google.com/download?id=1WTb8eildL1MJ_bqBbc3nX8ODh2RQmTyH&export=download&authuser=0&confirm=t&uuid=9e7f421b-83ba-40f7-ae13-de0722c77fe7&at=AN8xHorqiTUWqUKYXNAdjj-miSv8:1753191732010",
         desc: "Phần mềm dùng vẽ sơ đồ, mạch điện, dễ dùng do microsoft phát triển. Theo hướng kéo thả. Áp dụng cho người chỉ cần cài 1 phần mềm này hoặc máy đã có những phần mềm microsoft khác chỉ cài bổ sung thêm.",
         price: "Miễn phí"
       },
       {
         name: "Word - Excel - PowerPoint",
         icon: "office.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EqHcaiJwitFHkJckXng3DvoBHrGR66jRt-S7_dbSyeSOdw?e=C46VvO",
+        link: "https://drive.usercontent.google.com/download?id=1IDPyS4kjfpelijlMWE9ByFKLX2qSWJik&export=download&authuser=0&confirm=t&uuid=faa92ee8-d873-47e7-87cd-560a683be9e7&at=AN8xHopehHT0OlOjGJXlcSj4tmzI:1753190843791",
         desc: "3 phần mềm cơ bản thường dùng và hữu dụng nhất của Microsoft.",
         price: "Miễn phí"
       },
       {
         name: "Bộ cài tổng Microsoft office",
         icon: "vs_pj_of.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/En3sWvwJCmpDux2e3Ce8smIBxycNlx65_chrpI-PF-widQ?e=ZSmOjU",
+        link: "https://drive.usercontent.google.com/download?id=1ByncarnLRFkDbVMmMG8pq_4IGNhD5Mf7&export=download&authuser=0&confirm=t&uuid=b3f7b0bf-f555-457a-9381-5087bc1dc21e&at=AN8xHorYCpFni7K6WfUDWfyrYW8z:1753191521581",
         desc: "Bộ cài đã bao gồm 5 ứng dụng: Word; Excel; PowerPoint; Visio; Project",
         price: "Miễn phí"
       },
       {
         name: "Allavsoft",
         icon: "allavsoft.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Erri4szqteVBjV-u2ztrXS8B9gwXUl2d0n-Wt00e_0IfMQ?e=4kSw0Y",
+        link: "https://drive.usercontent.google.com/download?id=1BVJBabSlPnI7V9FJIy7OTxjGZYdVEH2H&export=download&authuser=0&confirm=t&uuid=a7148548-87e7-4de5-9684-105496ffed49&at=AN8xHor-oY7tvMlgi6hury4ZFlv3:1753190589463",
         desc: "Phần mềm tải video YouTube, Facebook, Vimeo, Dailymotion, SoundCloud, và thậm chí là cả Spotify bằng đường link. Kèm thêm chức năng ghép video nhanh, convert định dạng video. (Kích hoạt bản quyền)",
         price: "$59.99"
       },
       {
         name: "Everything",
         icon: "everything.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EuXnMMdW1CpDlG78sqVH5LkBRFbUOuxCZr6-jebOHdFXHQ?e=Mxc797",
+        link: "https://drive.usercontent.google.com/download?id=1uhajCO-GImO2W3TmcZq4DdeozDRp-FUf&export=download&authuser=0&confirm=t&uuid=d65d25e1-ed6d-4507-94a1-f2809efc0611&at=AN8xHood_l4eGoH8UWNaDpt_AfPA:1753190652554",
         desc: "Phần mềm hỗ trợ tìm kiếm file nhanh trong máy tính của bạn. Áp dụng tiện nhất với những người có số lượng lớn file mà hay quên vị trí lưu.",
         price: "Miễn Phí"
       },
       {
         name: "Traffic Monitor",
         icon: "traffic.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ely7Xsur1BVKlyEPdwvl72IBasZpGE4OugnYHOmGLIdMMw?e=gyTTNT",
+        link: "https://drive.usercontent.google.com/download?id=15wltzodzuu1vbPl4dKPIlqA0zCHzV7Uz&export=download&authuser=0&confirm=t&uuid=f6e01b10-819c-467f-a8ce-a1a61f10eb5a&at=AN8xHood-CxilOH8NdkN89f_3D6b:1753191637514",
         desc: "Phần mềm hỗ trợ bạn kiểm tra tốc độ dowload/upload của mạng. Có thêm chức năng xem nhanh dung lượng ram, cpu ở góc dưới bên phải cài đặt.",
         price: "Miễn Phí"
       },
       {
         name: "EVkey",
         icon: "evkey.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ehw6BTWKa8FKnuQahLLOTWgBaLqKiy0Rr-i9el8pwgT2Bw?e=8IqEse",
+        link: "https://drive.usercontent.google.com/download?id=1XIOQZbm_idKJYgyiijzDxYRJKA1nF-Hv&export=download&authuser=0&confirm=t&uuid=5052e975-67d0-4810-9bed-19a3dc7f6583&at=AN8xHorOx4-9GA11PaWLNKm86y3y:1753190747582",
         desc: "Bộ gõ tiếng Việt",
         price: "Miễn Phí"
       },
       {
         name: "Faststone Capture",
         icon: "fsc.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ElT4874yNStCuXJiZ004MxcBTgvF6E7o4p-7My0UCkDILg?e=G074QZ",
+        link: "https://takeout-download-drive.usercontent.google.com/download/Faststone%20Capture-20250722T133649Z-1-001.zip?j=ff7cdd48-b50b-46c3-a8c6-6911cf7407a7&i=0&user=86877328753&authuser=0",
         desc: "Phần mềm hỗ trợ chụp ảnh màn hình, sửa ảnh, quay video màn hình. ALL in One",
         price: "$19.95"
       },
       {
         name: "Winrar",
         icon: "rar.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EjMT3ipfXX5Nujbf8XAKoS0BQxl9uunfCvvTlMrVkdAuhg?e=VvfWiU",
+        link: "https://takeout-download-drive.usercontent.google.com/download/RAR-20250722T134333Z-1-001.zip?j=1b2e7611-2f53-499f-b705-5432f0fc9e6e&i=0&user=86877328753&authuser=0",
         desc: "Phần mềm hỗ trợ giải và nén file phổ biến nhất hiện nay",
         price: "Miễn Phí"
       },
       {
         name: "Youtube Music",
         icon: "YTM.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha_koha_io_vn/EtOe2fEzSvFOvG3x78G0tYcBcUcilA7Oj0AKTIT_BDGhUw?e=63cDp7",
+        link: "https://drive.usercontent.google.com/download?id=1WNUVeIo5SWCh2pDbLA5fgmeA3SmuOUHK&export=download&authuser=0&confirm=t&uuid=54e71606-a585-4c64-bc8c-c7e5f7ce1820&at=AN8xHoqS6JClJkGn52OdBYrWnAgd:1753192112901",
         desc: "YouTube Music hay YouTube Âm nhạc là một dịch vụ nghe nhạc trực tuyến trên ứng dụng của YouTube. Nó cho phép người dùng duyệt qua các bài hát, video âm nhạc YouTube dựa trên sở thích gồm: thể loại, danh sách phát và đề xuất. File đã fix gói chỉ cần chạy! ",
         price: "Miễn Phí"
       },
@@ -280,7 +280,7 @@ body {
       {
         name: "ABBYY FineReader PDF",
         icon: "abbyy.png",
-        link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha_koha_io_vn/Ej8_ZcwsXOpIrTqTCtQfg6oB2MR5UGX6a_sQ2X3xM5XvFA?e=G9jv5T",
+        link: "https://drive.usercontent.google.com/download?id=1UVhR4LPUmJh6DAkIOGlckliP0p-dxf1_&export=download&authuser=0&confirm=t&uuid=3daa73e5-123b-42e5-883f-b6c4e238ff5e&at=AN8xHopZEC8wLDkJRJ3PS5MxxW1l:1753190374875",
         desc: "ABBYY FineReader PDF 15 là một công cụ PDF phổ biến để quản lý tài liệu tại nơi làm việc ảo. Được hỗ trợ bởi các công nghệ OCR dựa trên AI của ABBYY và các công nghệ chuyển đổi tài liệu, FineReader giúp thông tin được khóa trong các tài liệu có thể kiện và giúp nâng cao năng suất của doanh nghiệp.",
         price: "$99/Year"
       },
