--- a/app.html
+++ b/app.html
@@ -252,7 +252,7 @@ body {
       {
         name: "Faststone Capture",
         icon: "fsc.png",
-        link: "https://takeout-download-drive.usercontent.google.com/download/Faststone%20Capture-20250722T133649Z-1-001.zip?j=ff7cdd48-b50b-46c3-a8c6-6911cf7407a7&i=0&user=86877328753&authuser=0",
+        link: "https://storage.googleapis.com/drive-bulk-export-anonymous/20250722T135221.513Z/4133399871716478688/c92dfd0f-579f-4a7b-bc70-e412655a6c1e/1/e9fe4240-dbfa-4782-894f-fe6d617764cd?authuser",
         desc: "Phần mềm hỗ trợ chụp ảnh màn hình, sửa ảnh, quay video màn hình. ALL in One",
         price: "$19.95"
       },
