--- a/app.html
+++ b/app.html
@@ -259,7 +259,7 @@ body {
       {
         name: "Winrar",
         icon: "rar.png",
-        link: "https://takeout-download-drive.usercontent.google.com/download/RAR-20250722T134333Z-1-001.zip?j=1b2e7611-2f53-499f-b705-5432f0fc9e6e&i=0&user=86877328753&authuser=0",
+        link: "https://storage.googleapis.com/drive-bulk-export-anonymous/20250722T135401.040Z/4133399871716478688/d87a5b66-bd02-4ba1-ac2a-20c092dffef5/1/acdbd55f-bc10-49bb-b84c-6896cd5f4dc2?authuser",
         desc: "Phần mềm hỗ trợ giải và nén file phổ biến nhất hiện nay",
         price: "Miễn Phí"
       },
